[package]
name = "apexpad-locker"
version = "0.1.0"
description = "Apexpad token locker program"
edition = "2021"

[workspace]
members = [
    "fuzz"
]

[lib]
crate-type = ["cdylib", "lib"]
name = "apexpad_locker"

[features]
idl-build = ["anchor-lang/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
fuzz = ["arbitrary", "honggfuzz"]


[dependencies]
anchor-lang = {version = "0.30.0", features = ["idl-build"]}
shank = "0.4.2"
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
solana-program = "1.5.6"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
arbitrary = { version = "0.4", features = ["derive"], optional = true }
honggfuzz = { version = "0.5", optional = true }

[dev-dependencies]
solana-sdk = "1.5.6"
solana-program-test = "1.5.6"
tokio = { version = "1.0", features = ["macros"]}
