[package]
name = "apexpad-locker-fuzz"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
publish = false
edition = "2018"

[dependencies]
honggfuzz = { version = "0.5", features = ["arbitrary"]  }
arbitrary = { version = "0.4", features = ["derive"] }
solana-program = "1.5.6"
solana-sdk = "1.5.6"
solana-program-test = "1.5.6"
quinn-proto = { version = "0.10.6", features = ["arbitrary"] }
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
apexpad-locker =  { version = "0.1.0", path="..", features=["fuzz", "no-entrypoint"] }
tokio = { version = "1.0", features = ["macros"]}

[[bin]]
name = "apexpad_locker_fuzz"
path = "src/vesting_fuzz.rs"
test = false
doc = false

